<resources>
    <string name="app_name">Student Grades</string>
    <string name="number_of_students">Total Number of Students</string>
    <string name="A_students">A Students</string>
    <string name="B_students">B Students</string>
    <string name="C_students">C Students</string>
    <string name="D_students">D Students</string>
    <string name="F_students">F Students</string>

    <!-- toast messages -->
    <string name="toast_empty">Invalid input: fields cannot be empty</string>
    <string name="toast_invalidNum">Invalid input: sum of each grade must add up to number of students</string>


    <!-- button labels -->
    <string name="compute">Compute</string>
    <string name="clear">Clear</string>
    <string name="back">Back</string>

</resources>
